--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -16,6 +16,13 @@
 
   transition: filter 0.2s;
 
+  &.outlined {
+    background-color: transparent;
+    border: 1px solid #835afd;
+    color: #835afd;
+
+  }
+
   img {
     margin-right: 8px;
   }
